--- a/index.html
+++ b/index.html
@@ -63,9 +63,22 @@
         <div id="cartItems" class="cart-items"></div>
         <div class="cart-total">
             <strong>Total: R$ <span id="totalValue">0.00</span></strong>
+            <button class="finalizar" onclick="finalizarPedido()">
+                <i class="fab fa-whatsapp"></i> Finalizar Pedido
+            </button>
         </div>
     </div>
-
+    <div id="orderModal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <span class="close" onclick="fecharModal()">&times;</span>
+            <h2>Finalizar Pedido</h2>
+            <label for="userName">Nome:</label>
+            <input type="text" id="userName" required>
+            <label for="userAddress">Endereço:</label>
+            <input type="text" id="userAddress" required>
+            <button onclick="submitOrder()">Enviar Pedido</button>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
