--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <th>Preço</th>
                     <th>Quantidade</th>
                     <th>Ações</th>
-                    <th>Url Imagem</th>
+                    <th>Imagem</th>
                 </tr>
             </thead>
             <tbody id="produtosTabelaBody"></tbody>
