--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </div>
     <div id="orderModal" class="modal" >
-        <form class="modal-content" style="width: 600px;padding: 25px;" onsubmit="submitOrder(event); return false;">
+        <form class="modal-content" style="max-width: 600px;padding: 25px;" onsubmit="submitOrder(event); return false;">
             <span class="close" style="align-self: end;" onclick="fecharModal()">&times;</span>
             <h2>Finalizar Pedido</h2>
             <label for="userName" >Nome:</label>
