--- a/planilha.html
+++ b/planilha.html
@@ -52,8 +52,18 @@
             </div>
         </div>
         
-        <div class="produtos" id="produtos"></div>
-        <div id="pagination" class="pagination"></div>
+        <table id="produtosTabela" class="produtos-tabela" style="display: none;">
+            <thead>
+                <tr>
+                    <th>Img</th>
+                    <th>Nome</th>
+                    <th>Preço</th>
+                    <th>Quantidade</th>
+                </tr>
+            </thead>
+            <tbody id="produtosTabelaBody"></tbody>
+        </table>
+        <div id="pagination" class="pagination" style="display: none;"></div>
     </div>
     
     <div id="pagination" style="text-align: center; margin-top: 20px;"></div>
@@ -95,7 +105,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Custom JS -->
-    <script src="assets/js/renderCard.js"></script>
+    <script src="assets/js/renderTabela.js"></script>
     <script src="assets/js/comum.js"></script>
 </body>
 
