--- a/planilha.html
+++ b/planilha.html
@@ -53,7 +53,7 @@
         </div>
         
         <table id="produtosTabela" class="produtos-tabela" style="display: none;">
-            <thead>
+            <thead style="font-size:12px;">
                 <tr>
                     <th>Img</th>
                     <th>Nome</th>
@@ -74,7 +74,8 @@
         </div>
         <div id="cartItems" class="cart-items"></div>
         <div class="cart-total">
-            <strong>Total: R$ <span id="totalValue">0.00</span></strong>
+            <strong style="font-size: 16px;">Total de Garrafas: <span id="totalValueGar">0</span></strong> <br>
+            <strong style="font-size: 16px;">Total: R$ <span id="totalValue">0.00</span></strong>
             <button class="finalizar" onclick="finalizarPedido()">
                 <i class="fab fa-whatsapp"></i> Finalizar Pedido
             </button>
@@ -85,19 +86,11 @@
             <span class="close" style="align-self: end;" onclick="fecharModal()">&times;</span>
             <h2>Finalizar Pedido</h2>
             <label for="userName" >Nome:</label>
-            <input type="text" id="userName" maxlength="50" required class="input-modal">
-            <label for="userUF">UF:</label>
-            <input type="text" id="userUF" maxlength="2" required class="input-modal">
-            <label for="userCity">Cidade:</label>
-            <input type="text" id="userCity" maxlength="60" required class="input-modal">
-            <label for="userNeighborhood">Bairro:</label>
-            <input type="text" id="userNeighborhood" maxlength="50" required class="input-modal">
-            <label for="userStreet">Rua:</label>
-            <input type="text" id="userStreet" required maxlength="50" class="input-modal">
-            <label for="userNumber">Número:</label>
-            <input type="text" id="userNumber" maxlength="10" required class="input-modal">
-            <label for="userComplement">Complemento:</label>
-            <input type="text" id="userComplement" class="input-modal">
+            <input type="text" id="userName" maxlength="50" class="input-modal">
+            <label for="userUF">Telefone:</label>
+            <input type="text" id="userTel" maxlength="12" class="input-modal">
+            <label for="userCity">Observação:</label>
+            <input type="text" id="userObs" maxlength="100" class="input-modal">
             <button type="submit">Enviar Pedido</button>
         </form>
     </div>
