--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         </div>
         <div id="cartItems" class="cart-items"></div>
         <div class="cart-total">
-            <strong>Total: R$ <span id="totalValue">0.00</span></strong>
+            <strong style="font-size: 16px;">Total de Garrafas: <span id="totalValueGar">0</span></strong> <br>
+            <strong style="font-size: 16px;">Total: R$ <span id="totalValue">0.00</span></strong>
             <button class="finalizar" onclick="finalizarPedido()">
                 <i class="fab fa-whatsapp"></i> Finalizar Pedido
             </button>
