--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lojinha de Vinhos</title>
+    <title>Pedido – Vinhos</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -21,7 +21,7 @@
 
 <body>
     <header class="header">
-        <h1>🍷 Lojinha de Vinhos</h1>
+        <h1>🍷 Pedido – Vinhos</h1>
         <div class="carrinho-contador" onclick="mostrarCarrinho()">
             <i class="fas fa-shopping-cart"></i>
             <span id="carrinhoContador">0</span>
@@ -57,7 +57,7 @@
     </div>
     
     <div id="pagination" style="text-align: center; margin-top: 20px;"></div>
-    <div id="cartMenu" class="cart-menu">
+    <div id="cartMenu" class="cart-menu modal">
         <div class="cart-header">
             <h2>Seus Produtos</h2>
             <button onclick="fecharCarrinho()">✖️</button>
@@ -69,6 +69,7 @@
             <button class="finalizar" onclick="finalizarPedido()">
                 <i class="fab fa-whatsapp"></i> Finalizar Pedido
             </button>
+            <div style="font-size: small;text-align: left;">Frete a combinar, será calculado de acordo com a região e tipo do pedido.</div>
         </div>
     </div>
     <div id="orderModal" class="modal" >
