--- a/planilha.html
+++ b/planilha.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lojinha de Vinhos</title>
+    <title>Pedido – Vinhos</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -21,7 +21,7 @@
 
 <body>
     <header class="header">
-        <h1>🍷 Lojinha de Vinhos</h1>
+        <h1>🍷 Pedido – Vinhos</h1>
         <div class="carrinho-contador" onclick="mostrarCarrinho()">
             <i class="fas fa-shopping-cart"></i>
             <span id="carrinhoContador">0</span>
@@ -56,8 +56,8 @@
             <thead style="font-size:12px;">
                 <tr>
                     <th>Img</th>
-                    <th>Nome</th>
-                    <th>Preço</th>
+                    <th>Vinho</th>
+                    <th>R$</th>
                     <th>Quantidade</th>
                 </tr>
             </thead>
@@ -67,9 +67,9 @@
     </div>
     
     <div id="pagination" style="text-align: center; margin-top: 20px;"></div>
-    <div id="cartMenu" class="cart-menu">
+    <div id="cartMenu" class="cart-menu modal">
         <div class="cart-header">
-            <h2>Seus Produtos</h2>
+            <h2>Resumo do pedido</h2>
             <button onclick="fecharCarrinho()">✖️</button>
         </div>
         <div id="cartItems" class="cart-items"></div>
@@ -79,6 +79,7 @@
             <button class="finalizar" onclick="finalizarPedido()">
                 <i class="fab fa-whatsapp"></i> Finalizar Pedido
             </button>
+            <div style="font-size: small;text-align: left;">Frete a combinar, será calculado de acordo com a região e tipo do pedido.</div>
         </div>
     </div>
     <div id="orderModal" class="modal" >
@@ -92,6 +93,7 @@
             <label for="userCity">Observação:</label>
             <input type="text" id="userObs" maxlength="100" class="input-modal">
             <button type="submit">Enviar Pedido</button>
+            <br/>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
