--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </div>
     <div class="container" style="max-width: 100%;overflow-y: auto;padding-bottom: 125px;">
         <div class="filter-container" id="filtosList">
-            <h3>Marcas</h3>
-            <div id="marcaCheckboxes" class="marcas-filter"></div>
+            <!-- <h3>Marcas</h3>
+            <div id="marcaCheckboxes" class="marcas-filter"></div> -->
             <div>
                 <h3>Faixa de Preço</h3>
                 <form class="price-range-form">
@@ -69,7 +69,7 @@
             <button class="finalizar" onclick="finalizarPedido()">
                 <i class="fab fa-whatsapp"></i> Finalizar Pedido
             </button>
-            <div style="font-size: small;text-align: left;">Frete a combinar, será calculado de acordo com a região e tipo do pedido.</div>
+            <div style="font-size: small;text-align: left;font-weight: bolder;width: 100%;text-align: center;">Frete a combinar, será calculado de acordo com a região e tipo do pedido.  <i class="fas fa-truck"></i></div>
         </div>
     </div>
     <div id="orderModal" class="modal" >
@@ -89,8 +89,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Custom JS -->
-    <script src="assets/js/renderCard.js"></script>
-    <script src="assets/js/comum.js"></script>
+    <script src="assets/js/renderCard.js?v=<%= Date.now() %>"></script>
+    <script src="assets/js/comum.js?v=<%= Date.now() %>"></script>
 </body>
 
 </html>
