--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     </div>
     <div style="width: 100%; display: flex; padding: 5px; height: 70px;">
         <button id="toggleViewButton" style="height: 40px;border: 0;margin-top: 10px;" onclick="mostraFiltro()"><i class="fas fa-filter"></i></button>
-        <input type="text" id="searchInput" placeholder="Pesquisar por nome..." oninput="filtra()" class="search-input" />
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="Pesquisar por nome..." oninput="filtra()" class="search-input" />
+            <i class="fas fa-search search-icon" style="position: relative;right: -180px;top: 10px;"></i>
+        </div>
     </div>
     <div class="container" style="max-width: 100%;overflow-y: auto;padding-bottom: 125px;">
         <div class="filter-container" id="filtosList">
