--- a/planilha.html
+++ b/planilha.html
@@ -82,7 +82,7 @@
             <button class="finalizar" onclick="finalizarPedido()">
                 <i class="fab fa-whatsapp"></i> Finalizar Pedido
             </button>
-            <div style="font-size: small;text-align: left;">Frete a combinar, será calculado de acordo com a região e tipo do pedido.</div>
+            <div style="font-size: small;text-align: left;font-weight: bolder;width: 100%;text-align: center;">Frete a combinar, será calculado de acordo com a região e tipo do pedido.  <i class="fas fa-truck"></i></div>
         </div>
     </div>
     <div id="orderModal" class="modal" >
