--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <i class="fas fa-search search-icon" style="position: relative;right: -160px;top: 10px;"></i>
         </div>
     </div>
-    <div class="container" style="max-width: 100%;overflow-y: auto;padding-bottom: 125px;">
+    <div class="container" style="max-width: 100%;overflow-y: auto;padding-bottom: 100px;">
         <div class="filter-container" id="filtosList">
             <!-- <h3>Marcas</h3>
             <div id="marcaCheckboxes" class="marcas-filter"></div> -->
@@ -56,10 +56,10 @@
         </div>
         
         <div class="produtos" id="produtos"></div>
-        <div id="pagination" class="pagination"></div>
+        <!-- <div id="pagination" class="pagination"></div> -->
     </div>
     
-    <div id="pagination" style="text-align: center; margin-top: 20px;"></div>
+    <!-- <div id="pagination" style="text-align: center; margin-top: 20px;"></div> -->
     <div id="cartMenu" class="cart-menu modal">
         <div class="cart-header">
             <h2>Seus Produtos</h2>
