--- a/planilha.html
+++ b/planilha.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         
-        <table id="produtosTabela" class="produtos-tabela" style="display: none;">
+        <table id="produtosTabela" class="produtos-tabela" style="display: none;height: fit-content;">
             <thead style="font-size:12px;">
                 <tr>
                     <th>Img</th>
