--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     <div id="loadingMessage" style="display: flex; position: fixed; top: 50%; left: 50%; width: 100%; height: 100%; background: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); z-index: 1000; display: flex; justify-content: center; align-items: center; transform: translate(-50%, -50%);">
         <p>Carregando, por favor aguarde...</p>
     </div>
+    <div style="display: flex;width: 100%;place-content: center;flex-wrap: wrap;">
+        <div onclick="enviaMensagemVazia()" style="cursor: pointer; margin-left: 10px;font-weight: bolder; width: fit-content;text-align: center;">
+            Contato: Edivaldo <br/> 46 920001218   <i class="fab fa-whatsapp" style="color: green; font-size: x-large;"></i>
+        </div>
+    </div>
     <div style="width: 100%; display: flex; padding: 5px; height: 70px;">
         <button id="toggleViewButton" style="height: 40px;border: 0;margin-top: 10px;" onclick="mostraFiltro()"><i class="fas fa-filter"></i></button>
         <div class="search-container">
