--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div style="display: flex;width: 100%;place-content: center;flex-wrap: wrap;">
         <div onclick="enviaMensagemVazia()" style="cursor: pointer; margin-left: 10px;font-weight: bolder; width: fit-content;text-align: center;">
-            Contato: Edivaldo <br/> 46 920001218   <i class="fab fa-whatsapp" style="color: green; font-size: x-large;"></i>
+            Contato: Edivaldo <br/> (46) 92000-1218   <i class="fab fa-whatsapp" style="color: green; font-size: x-large;"></i>
         </div>
     </div>
     <div style="width: 100%; display: flex; padding: 5px; height: 70px;">
