--- a/planilha.html
+++ b/planilha.html
@@ -66,7 +66,7 @@
                     <th>Img</th>
                     <th>Vinho</th>
                     <th>R$</th>
-                    <th>Quantidade</th>
+                    <th>Qtde</th>
                 </tr>
             </thead>
             <tbody id="produtosTabelaBody"></tbody>
